--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +20,14 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "migrate": "^1.7.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
