feat: SEEDED TABLES FINALLY HALLELUJAH

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "knex": "^0.21.21",
     "migrate": "^1.7.0",
     "morgan": "^1.10.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-cli": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
